[ui] z-index fix

--- a/frappe/public/less/form_grid.less
+++ b/frappe/public/less/form_grid.less
@@ -188,6 +188,7 @@
 
 	.frappe-control {
 		margin-bottom: 0px;
+		position: relative;
 	}
 
 	.col-sm-6 {
